# infomax-sbdr

./: .gitignore  Antihebbian TD Learning.md  Binarized Masked Centroids.md  README.md  SingleBandUnit.md  SoftFront Sparse Search.md
infomax_sbdr/: pyproject.toml
infomax_sbdr/src/infomax_sbdr/: __init__.py  analytic_score_diffusion.py  antihebbian_band_modules.py  antihebbian_modules.py  antihebbian_td_modules.py  antihebbian_xor_modules.py  binary_comparisons.py  binary_comparisons_original.py  classifier_modules.py  clip_directional_gradient.py  config.py  conv_modules.py  dataset_cifar10.py  dataset_cifar100.py  dataset_classifier.py  dataset_fashionmnist.py  dataset_gsc.py  dataset_imagenet_1k.py  dataset_shd.py  dataset_xor.py  delay_modules.py  delay_modules_old.py  dense_modules.py  flo_computation.py  initializers.py  log_centroid_modules.py  modules.py  neural_gas.py  optax_clip.py  predefined_modules.py  recurrent_antihebbian_modules.py  recurrent_relu_modules.py  spike_eligibility_modules.py  timeconv_hdc_modules.py  torch2jaxdataloader.py  torch_antihebbian_modules.py  torch_modules.py  transformer_hdc_modules.py  transforms.py  utils.py
infomax_sbdr/src/infomax_sbdr/ahtd/: __init__.py  checkpoint.py  config.py  model_builder.py
infomax_sbdr/src/infomax_sbdr/ahtd/configs/: dvs_gesture_conv2d.toml  dvs_gesture_conv2d_stack.toml  fashionmnist_dense.toml  fashionmnist_dense_stacked.toml
infomax_sbdr/src/infomax_sbdr/old/: foldiak_layer copy.py  foldiak_layer.py  foldiak_layer_test.py  softmax_sbdr_layer.py  test copy.py  test.py
sbdr/: pyproject.toml
(+1432 files in other folders)
